packages/svelte/tests/validator/samples/const-tag-placement-svelte-boundary/input.svelte
<script>
  let a = $state("");
</script>

<svelte:boundary>
	{@const x = a}
	{#snippet failed()}
		{x}
	{/snippet}
	<FlakyComponent />
</svelte:boundary>