packages/svelte/tests/compiler-errors/samples/runes-wrong-state-snapshot-args/main.svelte
<script>
	const foo = $state.snapshot();
</script>
